--- a/DiziCashier.API/appsettings.json
+++ b/DiziCashier.API/appsettings.json
@@ -5,6 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "DiziCashierMongoDatabase": {
+    "ConnectionString": "mongodb://localhost:27017",
+    "DatabaseName": "DiziCashier"
+  },
   "ConnectionStrings": {
     "DiziCashier": "Server=DESKTOP-8EVEKML\\SQLEXPRESS;Database=AccountingApplication;UID=sa;PWD=545655;TrustServerCertificate=True;"
   },
