Unit of pattern implemented

--- a/DiziCashier.Infrastructure/DiziCashier.Infrastructure.csproj
+++ b/DiziCashier.Infrastructure/DiziCashier.Infrastructure.csproj
@@ -23,6 +23,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\DiziCashier.Application\DiziCashier.Application.csproj" />
     <ProjectReference Include="..\DiziCashier.Core\DiziCashier.Core.csproj" />
   </ItemGroup>
 
